--- a/blogpost.html
+++ b/blogpost.html
@@ -11,5 +11,14 @@
                 <p>Y este es el parrafo de inicio donde
                     vamos a explicar las cosas increibles
                     se pueden hacer con ramas</p>
+                <p>Los blogs son la mejor forma de compartir
+                    información y tus ideas. Mucho mas que
+                    ir a conferencias o salir en Youtube. 
+                    Excepto si eres un rockstar. Pero
+                    estadísticamento no lo eres... 
+                    por ahora.
+                </p>
+            </div>
+        </div>
     </body>
 </html>
