--- a/blogpost.html
+++ b/blogpost.html
@@ -24,6 +24,7 @@
                     estadísticamento no lo eres... 
                     por ahora.
                 </p>
+                <p>Suscribete y dale like</p>
             </div>
         </div>
     </body>
