--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 Superblog 
                 <span id="tagline">
-                    Tu blog de cabecera
+                    Tu blog de programación
                 </span>
             </div>
             <div id="post">       
